# gti-Project1

./: fibonacci.py  pyproject.toml  readme.md
.github/workflows/: pytest.yml
src/: fibonacci.py  password_validate.py
src/tests/: test_fibonacci.py
